--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,128 +1,20 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<mat-toolbar color="primary">
+  <a class="title" href="/">{{ title }}</a>
 
-    <!-- Bootstrap CSS --> <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <button mat-raised-button *ngIf="!loginDisplay" style="margin-left:16px" (click)="login()">Optimize</button>
+  <button mat-raised-button *ngIf="loginDisplay" style="margin-left:16px" (click)="logout()">Logout</button>
   
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <div class="toolbar-spacer"></div>
 
-    <title>Schedule Management</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">#EXL</a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Provide Details<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Agenda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="#">MapView</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " href="#">About Dev's</a>
-          </li>
-        </ul>
-   
-      </div>
-    </nav>
+  <a mat-button [routerLink]="['profile']">Profile</a>
 
-<div class="flexit">
-  <div class="flexit__seperator">
+  <button mat-raised-button *ngIf="!loginDisplay" (click)="login()">Login</button>
+  <button mat-raised-button *ngIf="loginDisplay" (click)="logout()">Logout</button>
 
-<div>
-  <form #addressForm="ngForm" class="container mt-3" (ngSubmit)="logValue()">
-    <div class="row justify-content-center">
-      <div class="col-6">
-          <button type="button" class="btn btn-primary mb-2" (click)="addAddress()">Add Location</button>
-        <section class="container border mb-4 p-3" *ngFor="let address of addresses; let i = index;">
-          <div class="row">
-            <div class="col-6">
-                <h4>Address {{i + 1}}</h4>
-            </div>
-            <div class="col-6 text-right">
-                <button type="button" class="btn btn-danger btn-sm" (click)="removeAddress(i)">Remove Location</button>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-6">
-                <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control" [(ngModel)]="address.address" name="address_{{address.id}}" placeholder="Name"/>
-                  </div>
-            </div>
-            <div class="col-6">
-                <div class="form-group">
-                    <label>Address</label>
-                    <input type="text" class="form-control" [(ngModel)]="address.street" name="street_{{address.id}}" placeholder="Address"/>
-                  </div>
-            </div>
-          </div>
-          
-          <div class="row">
-            <div class="col-6">
-                <div class="form-group">
-                    <label>latitude</label>
-                    <input type="text" class="form-control" [(ngModel)]="address.city" name="city_{{address.id}}" placeholder="0"/>
-                  </div>
-            </div>
-            <div class="col-6">
-                <div class="form-group">
-                    <label>Longitude</label>
-                    <input type="text" class="form-control" [(ngModel)]="address.city" name="city_{{address.id}}" placeholder="0"/>
-                  </div>
-            </div>
-          </div>
-        </section>
-  
-        <div class="text-right">
-            <input type="submit" class="btn btn-success" value="Submit"/>
-             
-        </div>
-        
-      </div>
-    </div>
-    <button type="button" class="btn btn-primary mb-2" (click)="addAddress()">Add Address</button>
-  </form>
- <div>Total Number of Days planned :  <input type="text" name="" id=""></div>
-</div>
+</mat-toolbar>
+<div class="container">
     
-
-
-    </div>
-  <div class="flexit__seperator">  <agm-map [latitude]="start_end_mark[0][0]" [longitude]="start_end_mark[0][1]"
-    [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true">
-        <agm-marker *ngFor="let coordinate of start_end_mark; let i=index"
-        [latitude]="coordinate[0]"
-        [longitude]="coordinate[1]" [agmFitBounds]="true"></agm-marker>
-        <agm-polyline [visible]="true" [strokeWeight]="3" [strokeColor]="'#07b57a'">
-              <agm-polyline-point
-              *ngFor="let coordinate of latlng; let i=index"
-              [latitude]="coordinate[0]"
-              [longitude]="coordinate[1]">
-
-</agm-polyline-point>
-</agm-polyline>
-      </agm-map></div>
+ 
+  <!--This is to avoid reload during acquireTokenSilent() because of hidden iframe -->
+  <router-outlet *ngIf="!isIframe"></router-outlet>
 </div>
-
-
-
-
-
-   
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-   </body>
-</html>
