--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,26 +1,12 @@
 
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
 
-agm-map {
-    height: 100%;
-    width: 100%;
-  }
-  
-  
-  * {
-    font-family: Lato;
-  
-  }
-  
-  a {
-    color: darkblue;
-  }
-.flexit{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-  &__seperator{
-    width: 50%;
-    height: 100%;
-  }
+a.title {
+  color: white;
+}
+
+.container{
+  margin: 0;
 }
